<resources>
    <string name="app_name">CineComplex(User)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_fragment_movie">Phim</string>
    <string name="title_fragment_event">Tin mới &amp; Ưu đãi</string>
    <string name="title_fragment_listBooking">Vé của tôi</string>
    <string name="title_fragment_choose_complex">Chọn cụm rạp</string>
    <string name="title_fragment_choose_cinema">Chọn rạp &amp; suất chiếu</string>
    <string name="title_fragment_choose_seat">Chọn ghế</string>
    <string name="title_fragment_pay">Thanh toán</string>
    <string name="title_fragment_success">Kết quả thanh toán</string>
    <string name="title_qr_code_of_booking">Mã QR vé</string>
    <string name="title_fragment_select_complex_map">Chọn cụm rạp</string>
    <string name="title_fragment_select_cinema_map">Chọn rạp cần đến</string>
    <string name="title_fragment_maps">Chỉ đường</string>
    <string name="title_activity_chat">Hỏi đáp</string>
    <string name="title_fragment_order_by_movie">Gợi ý cho bạn</string>

    <!-- API KEY -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyB_CFIFGkXj5vhc6T1Nh0BJ8eEf8cEuR8M
    </string>


    <!-- Login -->
    <string name="title_activity_login">Đăng nhập</string>
    <string name="title_activity_register">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="find_account">Tìm tài khoản</string>
    <string name="authentication">Xác thực</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <!-- End -->

    <!-- Settings -->
    <string name="title_settings">Cài đặt</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="terms_of_service">Điều khoản dịch vụ</string>
    <string name="account">Thành viên</string>
    <string name="account_editing">Thông tin tài khoản</string>
    <!-- End -->

    <!-- notice -->
    <string name="title_fragment_notice">Thông báo</string>

    <!-- Order -->
    <string name="order_button">Đặt vé</string>

    <!-- review -->
    <string name="send_review_button">Gửi đánh giá</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>