<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/settings_navigation"
            app:startDestination="@+id/nav_settings">

    <fragment
            android:id="@+id/nav_settings"
            android:name="com.example.asg02.view.ui.setting.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings">
        <action android:id="@+id/action_nav_settings_to_nav_tos" app:destination="@id/nav_tos"/>
        <action android:id="@+id/action_nav_settings_to_nav_privacy_policy" app:destination="@id/nav_privacy_policy"/>
        <action android:id="@+id/action_nav_settings_to_nav_account" app:destination="@id/nav_account"/>
    </fragment>

    <fragment
            android:id="@+id/nav_tos"
            android:name="com.example.asg02.view.ui.setting.tos.TermsOfServiceFragment"
            android:label="@string/terms_of_service"
            tools:layout="@layout/fragment_terms_of_service"/>

    <fragment
            android:id="@+id/nav_privacy_policy"
            android:name="com.example.asg02.view.ui.setting.privacyPolicy.PrivacyPolicyFragment"
            android:label="@string/privacy_policy"
            tools:layout="@layout/fragment_privacy_policy"/>

    <fragment
            android:id="@+id/nav_account"
            android:name="com.example.asg02.view.ui.setting.account.AccountFragment"
            android:label="@string/account"
            tools:layout="@layout/fragment_account">
        <action android:id="@+id/action_nav_account_to_nav_account_editing"
                app:destination="@id/nav_account_editing"/>
    </fragment>

    <fragment
            android:id="@+id/nav_account_editing"
            android:name="com.example.asg02.view.ui.setting.account.AccountEditingFragment"
            android:label="@string/account_editing"
            tools:layout="@layout/fragment_account_editing"/>


</navigation>