<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/recovery_navigation"
            app:startDestination="@id/nav_find">

    <fragment
            android:id="@+id/nav_find"
            android:name="com.example.user.view.ui.recovery.findAccount.FindAccountFragment"
            android:label="@string/find_account"
            tools:layout="@layout/fragment_find_account">
        <action android:id="@+id/action_nav_find_to_nav_auth" app:destination="@id/nav_auth"/>
    </fragment>

    <fragment
            android:id="@+id/nav_auth"
            android:name="com.example.user.view.ui.recovery.auth.AuthenticationFragment"
            android:label="@string/authentication"
            tools:layout="@layout/fragment_authentication">
        <action android:id="@+id/action_nav_auth_to_nav_reset" app:destination="@id/nav_reset"/>
    </fragment>

    <fragment
            android:id="@+id/nav_reset"
            android:name="com.example.user.view.ui.recovery.reset.ResetPasswordFragment"
            android:label="@string/reset_password"
            tools:layout="@layout/fragment_reset_password"/>
</navigation>